components dynamics properties

--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,17 +1,17 @@
 <div class="container__big-card">
   <div class="big-card__photo">
     <img
-      src="https://d1fbh1knoaoilz.cloudfront.net/2022/12/What-s-new-in-Angular-15---Peerlist---cover.png"
+      src="{{ photoCover }}"
       alt=""
     >
   </div>
   <div class="big-card__title">
-    <h1><a href="#">Saiu a nova versão do Angular</a></h1>
+    <h1><a href="#">{{ cardTitle }}</a></h1>
   </div>
   <div class="big-card__description">
     <p>
       <a href="#">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus maiores quo commodi esse aliquam voluptatum, consequuntur aperiam.
+        {{ cardDescription }}
       </a>
     </p>
   </div>
