--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,11 +6,25 @@
 
 <div class="container__articles">
   <div class="articles__main">
-    <app-big-card></app-big-card>
+    <app-big-card
+      photoCover="https://d1fbh1knoaoilz.cloudfront.net/2022/12/What-s-new-in-Angular-15---Peerlist---cover.png"
+      cardTitle="Saiu a nova versão do Angular"
+      cardDescription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus doloribus accusamus asperiores ratione eius enim quae pariatur dignissimos repellendus odit."
+    ></app-big-card>
   </div>
+
   <div class="articles__others">
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
+    <app-small-card
+      photoCover="https://thenewscc.com.br/wp-content/uploads/2023/04/TECH.png"
+      cardTitle="Itália proíbe ChatGPT, recorde da Tesla e NYT não quer verificado"
+    ></app-small-card>
+    <app-small-card
+      photoCover="https://thenewscc.com.br/wp-content/uploads/2023/03/Untitled-1.png"
+      cardTitle="Musk e outros líderes tech pedem uma pausa na AI"
+    ></app-small-card>
+    <app-small-card
+      photoCover="https://thenewscc.com.br/wp-content/uploads/2023/03/Untitled-55.png"
+      cardTitle="China faz empréstimos bilionários para recuperar outros países"
+    ></app-small-card>
   </div>
 </div>
