--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -2,12 +2,12 @@
   <div class="container__small-card-content">
     <div class="small-card__photo">
       <img
-        src="https://thenewscc.com.br/wp-content/uploads/2023/03/Untitled-1.png"
+        src="{{ photoCover }}"
         alt=""
       >
     </div>
     <div class="small-card__title">
-      <h1><a href="#">Musk e outros líderes tech pedem uma pausa na AI</a></h1>
+      <h1><a href="#">{{ cardTitle }}</a></h1>
     </div>
   </div>
 
